--- a/dockerfiles/nginx/default.conf
+++ b/dockerfiles/nginx/default.conf
@@ -1,29 +1,15 @@
 server {
-    listen 8080;
+    listen 80;
     index index.php index.html;
     root /var/www/html/backend/public;
     client_max_body_size 100M;
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
+    add_header 'Access-Control-Allow-Origin' '*' always;
+    # add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+    # add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+    # add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
 
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
-}
-
-server {
-    listen 80;
-    index index.php index.html;
-    root /var/www/html/frontend;
-    client_max_body_size 100M;
+    # add_header Access-Control-Allow-Origin "http://localhost:5173/";
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -39,3 +25,25 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
+
+# server {
+#     listen 80;
+#     index index.php index.html;
+#     root /var/www/html/frontend;
+#     client_max_body_size 100M;
+#     add_header Access-Control-Allow-Origin *;
+
+#     location / {
+#         try_files $uri $uri/ /index.php?$query_string;
+#     }
+
+#     location ~ \.php$ {
+#         try_files $uri =404;
+#         fastcgi_split_path_info ^(.+\.php)(/.+)$;
+#         fastcgi_pass php:9000;
+#         fastcgi_index index.php;
+#         include fastcgi_params;
+#         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#         fastcgi_param PATH_INFO $fastcgi_path_info;
+#     }
+# }
