--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
           - GID=${GID:-1000}
       container_name: backend
       ports:
-        - 8080:8080
+        - 80:80
       volumes:
         - ./src/backend:/var/www/html/backend:delegated
       depends_on:
@@ -29,8 +29,8 @@ services:
         - UID=${UID:-1000}
         - GID=${GID:-1000}
     container_name: frontend
-    ports:
-      - 80:80
+    # ports:
+    #   - 8080:8080
     volumes:
       - ./src/frontend:/var/www/html/frontend:delegated
     # depends_on:
