--- a/src/backend/composer.json
+++ b/src/backend/composer.json
@@ -15,7 +15,6 @@
         "bramus/router": "^1.6",
         "rakit/validation": "^1.4",
         "symfony/http-kernel": "^6.0",
-        "symfony/dotenv": "^6.0",
         "symfony/psr-http-message-bridge": "^2.1",
         "twig/twig": "^3.4",
         "robmorgan/phinx": "^0.12.12",
@@ -31,9 +30,7 @@
         "nyholm/psr7": "^1.5",
         "nyholm/psr7-server": "^1.0",
         "phpspec/prophecy": "^1.15",
-        "phpspec/prophecy-phpunit": "^2.0",
-        "phpstan/phpstan": "^1.8",
-        "phpunit/phpunit": "^9.5"
+        "phpspec/prophecy-phpunit": "^2.0"
     },
     "autoload": {
         "psr-4": {
